--- a/project2backend/pom.xml
+++ b/project2backend/pom.xml
@@ -237,6 +237,16 @@
     <artifactId>jboss-transaction-api_1.2_spec</artifactId>
     <version>1.0.0.Final</version>
 </dependency>
+<dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-websocket</artifactId>
+    <version>4.0.1.RELEASE</version>
+</dependency>
+     <dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-messaging</artifactId>
+    <version>4.0.1.RELEASE</version>
+</dependency>  
   </dependencies>
 
   <build>
